Fixed chat behind shop and log volume

--- a/src/components/Chat/game.module.css
+++ b/src/components/Chat/game.module.css
@@ -6,6 +6,7 @@
   border-top-right-radius: 4px;
   display: flex;
   flex-direction: column;
+  z-index: 200;
 }
 
 .largeContainer{
