--- a/src/game/HUD/Menu/styles.module.css
+++ b/src/game/HUD/Menu/styles.module.css
@@ -92,7 +92,7 @@
   align-content: center;
   justify-content: center;
   top:0;
-  z-index: 101;
+  z-index: 250;
   background-color: rgba(0,0,0,0.7);
 }
 
@@ -101,7 +101,7 @@
   height: 30rem;
   width: 20rem;
   color: white;
-  z-index: 102;
+  z-index: 251;
   display: flex;
   flex-direction: column;
   align-items: center;
